--- a/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminSidebar.cshtml
@@ -50,9 +50,9 @@
                 </a>
             </li>
             <li id="ds-tasks" class="nav-item">
-                <a class="nav-link" href="/Admin/Tasks/">
+                <a class="nav-link" href="/Admin/PostLocations/">
                     <i class="nc-icon nc-layers-3"></i>
-                    <p>To-Do List</p>
+                    <p>Blog Layout</p>
                 </a>
             </li>
             <li id="ds-to-blog" class="nav-item active active-pro">
