--- a/Showcase/Areas/Admin/Views/PostLocations/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/PostLocations/Index.cshtml
@@ -5,29 +5,21 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-
-<div class="col-lg-12">
-    <div class="row">
-        <div class="page-header">
-            <div class="col-lg-11">
-                <h2>Index</h2>
-            </div>
-            <div class="col-md-1 col-lg-1 icon">
-                <span class="pull-right">
-                    <i class="fa fa-fw fa-4x fa-home"></i>
-                </span>
-            </div>
-        </div>
+<div class="row ds-title-row">
+    <div class="col-sm-1">
+        <h2 class="ds-admin-title">Index</h2>
     </div>
+    <div class="col-sm-11">
+        <button class="ds-create-btn">
+            @Html.ActionLink("Create New", "Create")
+        </button>
+    </div>
+    
+    @Html.Partial("_StatusMessage", TempData["StatusMessage"])
+    
 </div>
 
-<div class="col-lg-12">
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table id="admin-table" class="display responsive no-wrap" width="100%">
-<thead>
+<table id="ShowcaseDataTable" class="table responsive">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Created)
@@ -40,25 +32,25 @@
         </th>
         <th></th>
     </tr>
- </thead>
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Created)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastModified)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PostLocationName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PostLocationId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PostLocationId })
-        </td>
-    </tr>
-}
+    <tbody>
+        @foreach (var item in Model)
+        {
 
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Created)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastModified)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PostLocationName)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id=item.PostLocationId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.PostLocationId })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
-
-</div>
