--- a/Showcase/Areas/Admin/Views/Posts/Create.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Create.cshtml
@@ -9,21 +9,21 @@
 
 <h2>@ViewBag.Title</h2>
 <hr />
-@using (Html.BeginForm("Create", "Posts", FormMethod.Post, new {enctype = "multipart/form-data", @class="ds-admin-form" }))
+@using (Html.BeginForm("Create", "Posts", FormMethod.Post, new { enctype = "multipart/form-data", @class = "ds-admin-form" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="row">
         <div class="col-md-8">
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.PostName, htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.PostName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PostName, "", new { @class = "text-danger" })
             </div>
-    
+
             <div class="form-group s-tiny-group">
                 @Html.LabelFor(model => model.PostContent, htmlAttributes: new { @class = "control-label" })
                 <textarea id="ShowcaseEditor" name="PostContent" class="ds-fields form-control"></textarea>
@@ -35,9 +35,10 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label" })
                 <div class="checkbox">
-                    @Html.DropDownListFor(model => model.Author, Post.GetAuthorList(), "Select Author", new { @class = "browser-default form-control custom-select" })
+                    @Html.DropDownListFor(model => model.Author, Model.GetAuthorList(), "Select Author", new {@class = "browser-default form-control custom-select" })
                     @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
                 </div>
+                <input type="hidden" id="ds-author-id" name="AuthorId" value="" />
             </div>
 
             <div class="form-group">
@@ -56,23 +57,23 @@
                 @Html.LabelFor(model => model.Categories, "Assign Categories", htmlAttributes: new { @class = "control-label" })
                 @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedCategoryIds", "ds-checkbox", Model.CategoryMultiSelectList))
             </div>
-            
+
             <div class="form-group">
-                @Html.LabelFor(model => model.PostLocations, "Assign Categories", htmlAttributes: new { @class = "control-label" })
-                @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("LocationMultiSelectList", "ds-checkbox", Model.LocationMultiSelectList))
+                @Html.LabelFor(model => model.PostLocations, "Assign Locations", htmlAttributes: new { @class = "control-label" })
+                @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedLocationIds", "ds-checkbox", Model.LocationMultiSelectList))
             </div>
 
             @*<div class="form-group">
-            @Html.LabelFor(model => model.Tags, "Assign Tags", htmlAttributes: new {@class = "control-label"})
-            @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedTagIds", "ds-checkbox", Model.TagMultiSelectList))
-        </div>
-            <div class="form-group">
-            @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label" })
-            <div class="checkbox">
-                @Html.EditorFor(model => model.Active)
-                @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+                    @Html.LabelFor(model => model.Tags, "Assign Tags", htmlAttributes: new {@class = "control-label"})
+                    @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedTagIds", "ds-checkbox", Model.TagMultiSelectList))
+                </div>
+                    <div class="form-group">
+                    @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label" })
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.Active)
+                        @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
+                    </div>
+                </div>*@
         </div>
     </div>
     <br />
@@ -84,8 +85,20 @@
         </div>
         <div class="col-md-6 text-right">
             <div class="form-group">
-                @Html.ActionLink("Back to List", "Index", "Posts", null, new {@class= "btn ds-default-btn" } )
-                </div>
+                @Html.ActionLink("Back to List", "Index", "Posts", null, new { @class = "btn ds-default-btn" })
             </div>
         </div>
+    </div>
+}
+
+@section scripts {
+    <script type="text/javascript">
+        $(function() {
+            $('.ds-admin-form').on('submit',
+                function() {
+                    var selectedAuthor = $('#Author').val();
+                    $('#ds-author-id').val(selectedAuthor);
+                });
+        });
+    </script>
 }
