--- a/Showcase/Areas/Admin/Views/Posts/Details.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Details.cshtml
@@ -1,8 +1,11 @@
-﻿@model Showcase.Models.Post
+﻿@using Showcase.Helpers
+@model Showcase.Models.Post
 
 @{
-    ViewBag.Title = "Posts";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+                /**/
+
+                ViewBag.Title = "Posts";
+                Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Details</h2>
@@ -17,6 +20,13 @@
 
         <dd>
             @Html.DisplayFor(model => model.PostName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PostImage)
+        </dt>
+        <dd>
+            @Html.Image(Model.PostImage)
         </dd>
 
         <dt>
@@ -42,23 +52,6 @@
         <dd>
             @Html.DisplayFor(model => model.ViewCount)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.InActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.InActive)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
-
     </dl>
 </div>
 <p>
