--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -19,6 +19,14 @@
         @Html.HiddenFor(model => model.PostId)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label" })
+            <div class="checkbox">
+                @Html.DropDownListFor(model => model.Author, Model.GetAuthorList(), "Select Author", new { @class = "browser-default form-control custom-select" })
+                @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.PostName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PostName, new { htmlAttributes = new { @class = "form-control" } })
@@ -49,6 +57,16 @@
                 @Html.ValidationMessageFor(model => model.PostImageUpload, "", new { @class = "text-danger" }) <br />
                 @Html.Image(Model.PostImage)
             </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Categories, "Assign Categories", htmlAttributes: new { @class = "control-label" })
+            @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedCategoryIds", "ds-checkbox", Model.CategoryMultiSelectList))
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.PostLocations, "Assign Locations", htmlAttributes: new { @class = "control-label" })
+            @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("LocationMultiSelectList", "ds-checkbox", Model.LocationMultiSelectList))
         </div>
 
         <div class="form-group">
