--- a/Showcase/Areas/Admin/Views/Authors/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Authors/Index.cshtml
@@ -37,59 +37,42 @@
             @Html.DisplayNameFor(model => model.Age)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FacebookUrl)
+            @Html.DisplayName("Posts")
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TwitterUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.InstagramUrl)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LinkedInUrl)
-        </th>
-        <th></th>
+        <th>Actions</th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NickName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Location)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FacebookUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TwitterUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InstagramUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LinkedInUrl)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.AuthorId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.AuthorId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.AuthorId })
-            </td>
-        </tr>
+        int postCount = item.Posts.Count();
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UserName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NickName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Location)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Age)
+        </td>
+        <td>
+            @postCount.ToString()
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.AuthorId }) |
+            @Html.ActionLink("Details", "Details", new { id = item.AuthorId }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.AuthorId })
+        </td>
+    </tr>
     }
 
 </table>
