--- a/Showcase/Areas/Admin/Views/PostLocations/Details.cshtml
+++ b/Showcase/Areas/Admin/Views/PostLocations/Details.cshtml
@@ -34,7 +34,13 @@
         <dd>
             @Html.DisplayFor(model => model.PostLocationName)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.PostCount)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.PostCount)
+        </dd>
     </dl>
 </div>
 <p>
