--- a/Showcase/Areas/Admin/Views/PostLocations/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/PostLocations/Edit.cshtml
@@ -56,6 +56,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.PostCount, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PostCount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PostCount, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
