--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -3,6 +3,8 @@
 
 @{
     ViewBag.Title = "Posts";
+    ViewBag.Content = Model?.PostContent;
+    ViewBag.Author = Model?.Author;
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -11,90 +13,82 @@
 @using (Html.BeginForm("Edit", "Posts", FormMethod.Post, new { enctype = "multipart/form-data", @class = "ds-admin-form" }))
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.PostId)
+    <div class="row">
+        <div class="col-md-8">
 
-    <div class="form-horizontal">
-        <h4>Post</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.PostId)
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label" })
-            <div class="checkbox">
-                @Html.DropDownListFor(model => model.Author, Model.GetAuthorList(), "Select Author", new { @class = "browser-default form-control custom-select" })
-                @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PostName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PostName, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group">
+                @Html.LabelFor(model => model.PostName, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => Model.PostName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PostName, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PostUrl, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PostUrl, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group s-tiny-group">
+                @Html.LabelFor(model => model.PostContent, htmlAttributes: new { @class = "control-label" })
+                <textarea id="ShowcaseEditor" name="PostContent" class="ds-fields form-control"></textarea>
+                @Html.ValidationMessageFor(model => Model.PostContent, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-3">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label" })
+                <div class="checkbox">
+                    @Html.DropDownListFor(model => model.AuthorList, Model?.GetAuthorList(), "Select Author", new { @class = "browser-default form-control custom-select" })
+                    @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
+                </div>
+                <input type="hidden" id="ds-author-id" name="AuthorId" value="@Model.Author.AuthorId" />
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.PostUrl, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => Model.PostUrl, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PostUrl, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PostContent, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PostContent, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PostContent, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.Label("Post Image", htmlAttributes: new { @class = "control-label" })
-            <div class="col-md-10">
+            <div class="form-group">
+                @Html.Label("Post Image", htmlAttributes: new { @class = "control-label" })
                 @Html.TextBoxFor(model => model.PostImageUpload, null, new { @class = "form-control", type = "file" })
                 @Html.ValidationMessageFor(model => model.PostImageUpload, "", new { @class = "text-danger" }) <br />
                 @Html.Image(Model.PostImage)
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Categories, "Assign Categories", htmlAttributes: new { @class = "control-label" })
-            @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedCategoryIds", "ds-checkbox", Model.CategoryMultiSelectList))
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PostLocations, "Assign Locations", htmlAttributes: new { @class = "control-label" })
-            @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("LocationMultiSelectList", "ds-checkbox", Model.LocationMultiSelectList))
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ViewCount, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ViewCount, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ViewCount, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Categories, "Assign Categories", htmlAttributes: new { @class = "control-label" })
+                @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedCategoryIds", "ds-checkbox", Model.CategoryMultiSelectList))
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Active)
-                    @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.PostLocations, "Assign Locations", htmlAttributes: new { @class = "control-label" })
+                @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedLocationIds", "ds-checkbox", Model.LocationMultiSelectList))
+            </div>
+
+            @*<div class="form-group">
+                    @Html.LabelFor(model => model.Tags, "Assign Tags", htmlAttributes: new {@class = "control-label"})
+                    @Html.Partial("_CheckBoxList", ShowcaseHtmlHelpers.GetCheckboxList("SelectedTagIds", "ds-checkbox", Model.TagMultiSelectList))
                 </div>
+                    <div class="form-group">
+                    @Html.LabelFor(model => model.Active, htmlAttributes: new { @class = "control-label" })
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.Active)
+                        @Html.ValidationMessageFor(model => model.Active, "", new { @class = "text-danger" })
+                    </div>
+                </div>*@
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <input type="submit" value="Update" class="btn ds-default-btn" />
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10 ds-submit-col">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.ActionLink("Back to List", "Index")
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
