--- a/Showcase/Areas/Admin/Views/Posts/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Showcase.Models.Post>
+﻿@using ShowcaseResources
+@model IEnumerable<Showcase.Models.Post>
 @{
     ViewBag.Title = "Posts";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -31,22 +32,29 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @if (Model != null)
         {
+            foreach (var item in Model)
+            {
 
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PostName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Author.UserName)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.PostId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.PostId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.PostId })
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PostName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Author.UserName)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.PostId}) |
+                        @Html.ActionLink("Details", "Details", new {id = item.PostId}) |
+                        @Html.ActionLink("Delete", "Delete", new {id = item.PostId})
+                    </td>
+                </tr>
+            }
+        }
+        else
+        {
+            @Html.Raw(Resources.NoPostsCreated)
         }
     </tbody>
 </table>
