--- a/Showcase/Areas/Admin/Views/Posts/Details.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Details.cshtml
@@ -46,6 +46,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.PostSnippet)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PostSnippet)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ViewCount)
         </dt>
 
