--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewBag.Title = "Posts";
     ViewBag.Content = Model?.PostContent;
+    ViewBag.Snippet = Model?.PostSnippet;
     ViewBag.Author = Model?.Author;
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
@@ -29,6 +30,12 @@
                 @Html.LabelFor(model => model.PostContent, htmlAttributes: new { @class = "control-label" })
                 <textarea id="ShowcaseEditor" name="PostContent" class="ds-fields form-control"></textarea>
                 @Html.ValidationMessageFor(model => Model.PostContent, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="form-group s-tiny-group">
+                @Html.LabelFor(model => model.PostSnippet, htmlAttributes: new { @class = "control-label" })
+                <textarea id="ShowcaseSnippet" name="PostSnippet" class="ds-fields form-control"></textarea>
+                @Html.ValidationMessageFor(model => model.PostSnippet, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-1"></div>
