--- a/Showcase/Views/BlogLayout/_HomeBottomBody.cshtml
+++ b/Showcase/Views/BlogLayout/_HomeBottomBody.cshtml
@@ -14,7 +14,7 @@
             <div class="post-details">
                 <h4><a href="#">@post.PostName</a></h4>
                 <p>
-                    @post.PostContent.Take(10)
+                    @post.PostSnippet
                 </p>
                 <div class="blog-meta">
                     <a href="#" class="m-gap"><span class="lnr lnr-calendar-full"></span>@postDate</a>
