--- a/Showcase/Views/BlogLayout/_HomeTopCarousel.cshtml
+++ b/Showcase/Views/BlogLayout/_HomeTopCarousel.cshtml
@@ -10,17 +10,18 @@
                     <!-- single stories carousel -->
                     @foreach (var post in Model.Posts)
                     {
+                        string url = Url.Action("Post", "Blog", routeValues: new { title = post.PostUrl });
                         string createDate = post.Created?.Date.ToString("MMMM dd, yyyy");
 
                         <div class="single-stories-carousel d-flex align-items-center">
                             <div class="stories-thumb">
-                                @Html.TopCarouselImage(post.PostImages?.Thumbnail)
+                                <a href="@url">
+                                    @Html.TopCarouselImage(post.PostImages?.Thumbnail)
+                                </a>
                             </div>
                             <div class="stories-details">
                                 <h6>
-                                    <a href="">
-                                        @post.PostName
-                                    </a>
+                                    @Html.ActionLink(post.PostName, "Post", "Blog", routeValues: new { title = post.PostUrl}, htmlAttributes: new {id = "loginLink", @class = "nav-link"}) <i class="ni ni-collection d-lg-none"></i>
                                 </h6>
                                 <p>@createDate</p>
                             </div>
