--- a/Showcase/Views/Shared/_BlogHeader.cshtml
+++ b/Showcase/Views/Shared/_BlogHeader.cshtml
@@ -1,6 +1,6 @@
-﻿<div id="ds-progress-wrap">
-    <span class="ds-progress-bar" style="width: 1%;" id="ds-progress-bar"><span></span></span>
-</div>
+﻿<span id="ds-progress-wrap">
+    <span id="ds-progress-bar" class="ds-progress-bar" style="width: 1%;"></span>
+</span>
 <header id="ds-header" class="header-global">
     <nav id="navbar-main" class="ds-single-nav navbar navbar-main navbar-expand-lg navbar-light">
         <div class="container">
