--- a/Showcase/Views/Shared/_PostLayout.cshtml
+++ b/Showcase/Views/Shared/_PostLayout.cshtml
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-@Html.Partial("_Footer")
+@Html.Partial("_BlogFooter")
 @RenderSection("scripts", required: false)
 </body>
 </html>
