--- a/Showcase/Views/Blog/Post.cshtml
+++ b/Showcase/Views/Blog/Post.cshtml
@@ -23,7 +23,7 @@
     </div>
 </section>
 
-<main class="profile-page">
+<main class="ds-post-page">
     <section class="section-profile-cover section-shaped my-0">
         <!-- Circles background -->
         <div class="shape shape-style-1 alpha-4" style="background-image:url(@imageUrl)">
