--- a/Showcase/Views/Shared/_Footer.cshtml
+++ b/Showcase/Views/Shared/_Footer.cshtml
@@ -78,6 +78,7 @@
     <!-- End footer Area -->
 
 @Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryval")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/argonjs")
 @Scripts.Render("~/bundles/app")
