--- a/Showcase/Views/Shared/_Layout.cshtml
+++ b/Showcase/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             </div>
         <hr />
 
-        @Html.Partial("_Footer")
+        @Html.Partial("_AccountFooter")
         @RenderSection("scripts", required: false)
     </body>
 </html>
