--- a/Showcase/Views/Blog/Post.cshtml
+++ b/Showcase/Views/Blog/Post.cshtml
@@ -25,8 +25,10 @@
 
 <main class="ds-post-page">
     <section class="section-profile-cover section-shaped my-0">
+        <div class="ds-img-shade">
+        </div>
         <!-- Circles background -->
-        <div class="shape shape-style-1 alpha-4" style="background-image:url(@imageUrl)">
+        <div class="shape shape-style-1 alpha-4" style="background-image: url(@imageUrl)">
             <span></span>
             <span></span>
             <span></span>
@@ -36,11 +38,10 @@
             <span></span>
         </div>
     </section>
-
     <!-- Start content section -->
     <section id="ds-blog-content" class="ds-post-content">
         <div class="container ds-content-container">
-            <div class="mt-5 py-5 border-top text-center">
+            <div class="mt-5 py-5 border-top">
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
                         <h2 class="ds-post-subtitle">@Model.PostName</h2>
