--- a/Showcase/Views/Shared/_AccountHead.cshtml
+++ b/Showcase/Views/Shared/_AccountHead.cshtml
@@ -4,7 +4,7 @@
     <title>@ViewBag.Title - Showcase Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/AccountCss")
     @Scripts.Render("~/bundles/modernizr")
 
     <!-- Extra Fonts -->
@@ -15,3 +15,4 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto%3A300%2C400%2C500%2C700&amp;ver=4.9.8" rel="stylesheet" />
 </head>
+
