--- a/Showcase/Views/Shared/_AccountLayout.cshtml
+++ b/Showcase/Views/Shared/_AccountLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-@Html.Partial("_Head")
+@Html.Partial("_AccountHead")
 <body>
     @Html.Partial("_Header")
 
@@ -44,7 +44,8 @@
             </div>
         </div>
     </div>
-
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @RenderSection("scripts", required: false)
 
 </body>
