--- a/Showcase/Views/Shared/_BlogHeader.cshtml
+++ b/Showcase/Views/Shared/_BlogHeader.cshtml
@@ -1,27 +1,10 @@
 ﻿<header id="ds-header" class="header-global">
-    <nav id="navbar-main" class="ds-single-nav navbar navbar-main navbar-expand-lg navbar-light">
+    <nav id="nav-menu-container" class="ds-single-nav navbar navbar-main navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="/Blog/Index">
                 <img src="/Content/images/white-logo-dark-sm.png">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="navbar_global">
-                <div class="navbar-collapse-header">
-                    <div class="row">
-                        <div class="col-6 collapse-brand">
-
-                        </div>
-                        <div class="col-6 collapse-close">
-                            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
-                                <span></span>
-                                <span></span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <ul class="ds-primary-nav navbar-nav navbar-nav-hover align-items-lg-center">
+            <ul class="nav-menu ds-primary-nav navbar-nav navbar-nav-hover align-items-lg-center">
                     <li class="nav-item dropdown">
 
                         @Html.ActionLink("Blog", "Index", "Blog", routeValues: null, htmlAttributes: new {id = "loginLink", @class = "nav-link"}) <i class="ni ni-collection d-lg-none"></i>
@@ -63,7 +46,6 @@
                     </li>
                 </ul>
 
-            </div>
             @Html.Partial("_LoginPartial")
         </div>
     </nav>
