--- a/Showcase/Views/BlogLayout/_HomeMainCarousel.cshtml
+++ b/Showcase/Views/BlogLayout/_HomeMainCarousel.cshtml
@@ -33,7 +33,7 @@
                                     </div>
                                     <div class="details">
                                         <p>
-                                            @*post.PostSnippet*@
+                                            @Html.Raw(post.PostSnippet)
                                         </p>
                                     </div>
                                 </div>
