--- a/Showcase/Views/BlogLayout/_HomeBottomBody.cshtml
+++ b/Showcase/Views/BlogLayout/_HomeBottomBody.cshtml
@@ -20,7 +20,7 @@
                 <h4>@Html.ActionLink(post.PostName, "Post", "Blog", routeValues: new { title = post.PostUrl}, htmlAttributes: new {id = "ds-sliderLink", @class = "ds-slider-link"})
                 </h4>
                 <p>
-                    @post.PostSnippet
+                    @Html.Raw(post.PostSnippet)
                 </p>
                 <div class="blog-meta">
                     <a href="#" class="m-gap"><span class="lnr lnr-calendar-full"></span>@postDate</a>
