--- a/Showcase/Areas/Admin/Content/Admin.css
+++ b/Showcase/Areas/Admin/Content/Admin.css
@@ -14,8 +14,8 @@ body .dataTable td a {
     margin: 0px 10px;
 }
 body .ds-default-btn {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #4CAF50;
+    border-color: #4CAF50;
     color: #fff;
 }
 body .ds-status-success {
@@ -174,6 +174,9 @@ body .mce-tinymce {
     color: #565656;
     -webkit-box-shadow: none;
     box-shadow: none;
+}
+body .ds-post-img-wrap img {
+    width: 100%;
 }
 body .ds-checkbox-list {
     list-style-type: none;
