--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -59,7 +59,10 @@
                 @Html.Label("Post Image", htmlAttributes: new { @class = "control-label" })
                 @Html.TextBoxFor(model => model.PostImageUpload, null, new { @class = "form-control", type = "file" })
                 @Html.ValidationMessageFor(model => model.PostImageUpload, "", new { @class = "text-danger" }) <br />
-                @Html.Image(Model.PostImage)
+                
+                <div class="ds-post-img-wrap">
+                    @Html.Image(Model.PostImage)
+                </div>
             </div>
 
             <div class="form-group">
